--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet" />
-    <title>C</title>
+    <title>My coding journey</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
@@ -496,7 +496,7 @@ https://fancy-bonbon-56aa0e.netlify.app/
                                     thoughtful application of CSS
                                     ensures an aesthetically pleasing design, contributing to an engaging user
                                     interface. Overall, my dictionary project
-                                    showcases not only your technical skills but also your ability to combine various
+                                    showcases not only my technical skills but also your ability to combine various
                                     elements to deliver a well-rounded and
                                     enjoyable digital experience for users interacting with language and information.
                                 </p>
