--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ https://fancy-bonbon-56aa0e.netlify.app/
                                     thoughtful application of CSS
                                     ensures an aesthetically pleasing design, contributing to an engaging user
                                     interface. Overall, my dictionary project
-                                    showcases not only my technical skills but also your ability to combine various
+                                    showcases not only my technical skills but also my ability to combine various
                                     elements to deliver a well-rounded and
                                     enjoyable digital experience for users interacting with language and information.
                                 </p>
