--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     .eyes {
         animation: start 1s ease-in-out infinite alternate;
-
+        margin-top: 75px;
         color: white;
     }
 
