--- a/index.html
+++ b/index.html
@@ -655,20 +655,13 @@ let button = document.querySelector("button");
 button.addEventListener("click", newStep);
 
 
-     let hasVisited = localStorage.getItem("hasVisited");
+    let name = prompt("What is your name");
 
-      if (!hasVisited) {
-
-        setTimeout(function () {
-          let name = prompt("What is your name?");
-          console.log("Script is running");
-          console.log("Name entered:", name);
-          alert(`Hello, ${name}! 💕💕 Take a look around and welcome to this page!`);
-
-
-          localStorage.setItem("hasVisited", "true");
-        }, 100);
-      }
+        if (name === "" || name === null) {
+            alert("Hello! Welcome to my page");
+        } else {
+            alert(`Hello, ${name}! 💕💕 Welcome to my page`);
+        }
 
     </script>
 
